# ident-demo

./: indent-demo.cabal  stack.yaml
main/: Main.hs
src/: AST.hs  MegaParser.hs  Parser.hs
test/: Spec.hs  Tests.hs
